[package]
name = "tetrotime"
version = "0.1.0"
edition = "2023"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
clap = { version = "4.5.38", features = ["derive"] }
pixel_loop = { version = "*", default-features = false, features = [
  "crossterm",
] }

[[bin]]
name="tetrotime"
path="src/main.rs"
